# USASpending_MCP_Server

./: .dockerignore  .env  .env.example  .flake8  .gitignore  AGENTS.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.docx  CLAUDE.md  DOCKER_GUIDE.docx  DOCKER_GUIDE.md  Dockerfile  GEMINI.md  INSTRUCTIONS.md  MARKDOWN_STYLE_GUIDE.md  PROJECT_ARCHIVE.md  QUICKSTART.md  README.md  REFACTORING_GUIDE.md  REFACTORING_INDEX.md  claude_desktop_config.json  cloudbuild.yaml  debug_mac.sh  docker-compose.yml  docker-entrypoint.sh  example_client.py  explore_api_response.py  flake8-report.txt  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  server_manager.py  start_mcp_server.sh  start_server.sh  temp_client_query.py  test_client.sh  test_mcp_client.sh
docs/: API_RESOURCES.md  DOCUMENTATION_ROADMAP.md  FAR_ANALYTICS_GUIDE.md  LICENSE  MCP_BEST_PRACTICES_REVIEW.md  MULTI_TOOL_ANALYTICS_ARCHITECTURE.md  QUICKSTART.md  REFACTORING_SUMMARY.txt  STRUCTURED_LOGGING_GUIDE.md  api-mappings.json  far_part14.json  far_part15.json  query-templates.json
docs/archived/: CLAUDE_DOCX_FORMATTING_GUIDE.md  FUTURE_RECOMMENDATIONS.md  HIGH_SCHOOL_GUIDE.md  JUNIOR_DEVELOPER_GUIDE.md  MARKDOWN_STYLE_GUIDE.md  README.md  REFACTORING_SUMMARY.md
docs/data/far/: far_part16.json
docs/dev/: ARCHITECTURE_GUIDE.md  PRODUCTION_MONITORING_GUIDE.md  SERVER_MANAGER_GUIDE.md  TESTING_GUIDE.md
docs/guides/: CONVERSATION_LOGGING_GUIDE.md  HIGH_SCHOOL_GUIDE.md  IMPLEMENTATION_SUMMARY.md  JUNIOR_DEVELOPER_GUIDE.md  MCP_BEST_PRACTICES_REVIEW.md  QUICKSTART.md  RATE_LIMITING_AND_RETRY_GUIDE.md  STRUCTURED_LOGGING_GUIDE.md
docs/reference/: field-dictionary.json  query-optimization.json  reference-data.json  sample-responses.json  set-asides.json  tools-catalog.json  usaspending-api-spec.json
src/: __init__.py
src/helpers/: __init__.py
src/tools/: __init__.py  far_tools.py
src/usaspending_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/usaspending_mcp/data/: __init__.py
src/usaspending_mcp/data/far/: __init__.py  far_part19.json
src/usaspending_mcp/loaders/: __init__.py  far.py
src/usaspending_mcp/tools/: __init__.py  awards.py  classifications.py  conversations.py  far.py  helpers.py  profiles.py  spending.py
src/usaspending_mcp/utils/: __init__.py  constants.py  conversation_logging.py  far.py  logging.py  query_context.py  rate_limit.py  relevance_scoring.py  result_aggregation.py  retry.py  search_analytics.py
tests/: __init__.py  conftest.py  test_set_aside_implementation.py
tests/integration/: __init__.py  test_api_connectivity.py  test_set_aside_implementation.py
tests/scripts/: run_tests.sh  test_mcp_client.sh
tests/unit/: __init__.py  test_aggregation.py  test_conversation_logging.py  test_query_context.py  test_relevance_scoring.py  test_tools.py  test_utils_logging.py  test_utils_rate_limit.py  test_utils_retry.py
