[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usaspending-mcp"
version = "2.0.0"
description = "Model Context Protocol (MCP) server for querying federal spending data from USASpending.gov"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ronald Blake Jr", email = "developer@example.com"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "usaspending",
    "federal-spending",
    "government-data",
    "contracts",
    "grants"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet",
]

dependencies = [
    "fastmcp>=1.0.0",
    "mcp>=1.18.0,<2.0.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.15.0",
    "pydantic>=2.0.0",
    "python-dotenv>=0.19.0",
    "tenacity>=8.2.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/WebDev70/USASpending_MCP_Server"
Documentation = "https://github.com/WebDev70/USASpending_MCP_Server/docs"
Repository = "https://github.com/WebDev70/USASpending_MCP_Server.git"
Issues = "https://github.com/WebDev70/USASpending_MCP_Server/issues"

[project.scripts]
usaspending-mcp = "usaspending_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/usaspending_mcp --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/usaspending_mcp"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
